fullSandbox11072023/force-app/main/default/objects/Donation_Support__c/Donation_Support__c.object-meta.xml
<CustomObject>
    <label>Donation Support</label>
    <nameField>
        <displayFormat>HDPR-{00000}</displayFormat>
        <label>Donation Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Support</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>