fullSandbox11072023/force-app/main/default/objects/Donation_Support__c/fields/Approved_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Approved_Quantity__c</fullName>
    <label>Approved Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>