fullSandbox11072023/force-app/main/default/objects/Donation_Support__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product In-Kind</fullName>
            </value>
            <value>
                <fullName>Lifecycle Product</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Technician(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>