fullSandbox11072023/force-app/main/default/objects/Donation_Support__c/fields/Origin_Value__c.field-meta.xml
<CustomField>
    <fullName>Origin_Value__c</fullName>
    <label>Origin Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>