fullSandbox11072023/force-app/main/default/objects/Donation_Support__c/fields/UoM_Requested_Qty__c.field-meta.xml
<CustomField>
    <fullName>UoM_Requested_Qty__c</fullName>
    <inlineHelpText>Box, Case, Each</inlineHelpText>
    <label>UoM Requested Qty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BX</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>KT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>