fullSandbox11072023/force-app/main/default/objects/Donation_Support__c/recordTypes/Donation_Support.recordType-meta.xml
<RecordType>
    <fullName>Donation_Support</fullName>
    <active>true</active>
    <label>Donation Support</label>
</RecordType>